--- a/views/index.jade
+++ b/views/index.jade
@@ -20,11 +20,11 @@ block content
 
 	.jumbotron
 		.container
-			h1 Hello, world!
+			h1 Student Records!
 			p
 				| This repo tell us how to get api json data in jade template and generate pdf according to specific record.
 			p
-				a.btn.btn-primary.btn-lg(href='https://github.com/laxman091/MySite', role='button') Learn more »
+				a.btn.btn-primary.btn-lg(href='https://github.com/laxman091/MySite', role='button' target='_blank') Learn more »
 	.container
 		.row
 			.col-md-10
